--- a/index.html
+++ b/index.html
@@ -1,54 +1,82 @@
-<script>
-    let model, webcam, labelContainer, maxPredictions;
-    const settings = JSON.parse(localStorage.getItem('modelSettings'));
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>나만의 동물상 테스트</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+</head>
+<body>
+    <!-- 기존 콘텐츠 -->
 
-    async function init() {
-        if (!settings) {
-            alert('모델 설정이 필요합니다. 관리자 페이지에서 설정을 입력하세요.');
-            return;
+    <!-- 관리자 모드 버튼 추가 -->
+    <button id="admin-mode-btn" class="btn btn-secondary">관리자 모드</button>
+
+    <script>
+        document.getElementById('admin-mode-btn').addEventListener('click', function() {
+            var password = prompt('관리자 비밀번호를 입력하세요:');
+            if (password === '0000') {
+                window.location.href = 'admin.html';
+            } else {
+                alert('비밀번호가 틀렸습니다.');
+            }
+        });
+
+        let model, webcam, labelContainer, maxPredictions;
+        const settings = JSON.parse(localStorage.getItem('modelSettings'));
+
+        async function init() {
+            if (!settings) {
+                alert('모델 설정이 필요합니다. 관리자 페이지에서 설정을 입력하세요.');
+                return;
+            }
+
+            const modelURL = settings.modelUrl + 'model.json';
+            const metadataURL = settings.modelUrl + 'metadata.json';
+            model = await tmImage.load(modelURL, metadataURL);
+            maxPredictions = model.getTotalClasses();
+            labelContainer = document.getElementById('label-container');
+            for (let i = 0; i < maxPredictions; i++) {
+                const element = document.createElement('div');
+                element.classList.add('d-flex');
+                labelContainer.appendChild(element);
+            }
         }
 
-        const modelURL = settings.modelUrl + 'model.json';
-        const metadataURL = settings.modelUrl + 'metadata.json';
-        model = await tmImage.load(modelURL, metadataURL);
-        maxPredictions = model.getTotalClasses();
-        labelContainer = document.getElementById('label-container');
-        for (let i = 0; i < maxPredictions; i++) {
-            const element = document.createElement('div');
-            element.classList.add('d-flex');
-            labelContainer.appendChild(element);
+        async function predict() {
+            const image = document.getElementById('face-image');
+            const prediction = await model.predict(image, false);
+            prediction.sort((a, b) => parseFloat(b.probability) - parseFloat(a.probability));
+
+            const topPrediction = prediction[0].className;
+            const classDetail = settings.classDetails.find(detail => detail.name === topPrediction);
+
+            if (classDetail) {
+                const title = `<div class='${topPrediction}-animal-title'>${classDetail.title}</div>`;
+                const explain = `<div class='animal-explain pt-2'>${classDetail.explain}</div>`;
+                const celeb = `<div class='${topPrediction}-animal-celeb pt-2 pb-2'>${classDetail.celeb}</div>`;
+                $('.result-message').html(title + explain + celeb);
+            } else {
+                $('.result-message').html('<div class="animal-title">알 수 없음</div>');
+            }
+
+            for (let i = 0; i < maxPredictions; i++) {
+                const labelTitle = settings.classDetails[i] ? settings.classDetails[i].name : '알 수 없음';
+                const barWidth = Math.round(prediction[i].probability.toFixed(2) * 100) + '%';
+                const label = `<div class='animal-label d-flex align-items-center'>${labelTitle}</div>`;
+                const bar = `
+                    <div class='bar-container position-relative container'>
+                        <div class='${prediction[i].className}-box'></div>
+                        <div class='d-flex justify-content-center align-items-center ${prediction[i].className}-bar' style='width: ${barWidth}'>
+                            <span class='d-block percent-text'>${Math.round(prediction[i].probability.toFixed(2) * 100)}%</span>
+                        </div>
+                    </div>`;
+                labelContainer.childNodes[i].innerHTML = label + bar;
+            }
         }
-    }
-
-    async function predict() {
-        const image = document.getElementById('face-image');
-        const prediction = await model.predict(image, false);
-        prediction.sort((a, b) => parseFloat(b.probability) - parseFloat(a.probability));
-
-        const topPrediction = prediction[0].className;
-        const classDetail = settings.classDetails.find(detail => detail.name === topPrediction);
-
-        if (classDetail) {
-            const title = `<div class='${topPrediction}-animal-title'>${classDetail.title}</div>`;
-            const explain = `<div class='animal-explain pt-2'>${classDetail.explain}</div>`;
-            const celeb = `<div class='${topPrediction}-animal-celeb pt-2 pb-2'>${classDetail.celeb}</div>`;
-            $('.result-message').html(title + explain + celeb);
-        } else {
-            $('.result-message').html('<div class="animal-title">알 수 없음</div>');
-        }
-
-        for (let i = 0; i < maxPredictions; i++) {
-            const labelTitle = settings.classDetails[i] ? settings.classDetails[i].name : '알 수 없음';
-            const barWidth = Math.round(prediction[i].probability.toFixed(2) * 100) + '%';
-            const label = `<div class='animal-label d-flex align-items-center'>${labelTitle}</div>`;
-            const bar = `
-                <div class='bar-container position-relative container'>
-                    <div class='${prediction[i].className}-box'></div>
-                    <div class='d-flex justify-content-center align-items-center ${prediction[i].className}-bar' style='width: ${barWidth}'>
-                        <span class='d-block percent-text'>${Math.round(prediction[i].probability.toFixed(2) * 100)}%</span>
-                    </div>
-                </div>`;
-            labelContainer.childNodes[i].innerHTML = label + bar;
-        }
-    }
-</script>
+    </script>
+</body>
+</html>
