--- a/index.html
+++ b/index.html
@@ -10,10 +10,51 @@
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 </head>
 <body>
-    <!-- 기존 콘텐츠 -->
-
     <!-- 관리자 모드 버튼 추가 -->
     <button id="admin-mode-btn" class="btn btn-secondary">관리자 모드</button>
+
+    <!-- 기존 콘텐츠 -->
+    <section class="section">
+        <h1 class="title">나만의 동물상 테스트</h1>
+        <div class="image-container">
+            <img src="img/mainimage.jpg" alt="Main Image" class="image" />
+        </div>
+    </section>
+    <h2 class="subtitle">얼굴로 보는 인공지능 동물상 테스트</h2>
+
+    <div class="mt-3 container file-upload">
+        <div class="image-upload-wrap">
+            <input class="file-upload-input" type="file" onchange="readURL(this);" accept="image/*" />
+            <div class="drag-text">
+                <img src="img/upload.svg" class="mt-5 pt-5 upload" />
+                <h3 class="mb-5 pb-5 pt-4 upload-text">얼굴 사진을 드레그하거나 눌러서 업로드하세요!</h3>
+            </div>
+        </div>
+        <div class="file-upload-content">
+            <img class="file-upload-image" id="face-image" src="#" alt="your image" />
+            <div id="loading" class="animated bounce">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                </div>
+                <p class="text-center">AI가 당신의 사진을 분석중입니다.</p>
+            </div>
+            <p class="result-message"></p>
+            <div id="label-container" class="d-flex flex-column justify-content-around"></div>
+            <div id="addThis" class="addthis_inline_share_toolbox_6lz1"></div>
+            <div class="pt-3 image-title-wrap">
+                <button type="button p-2" class="try-again-btn" onclick="gaReload()">
+                    <span class="try-again-text">다른 사진으로 재시도</span>
+                </button>
+            </div>
+        </div>
+    </div>
+    <h4 class="mt-1 text-center">*사진은 절대 어디에도 저장되지 않습니다*</h4>
+
+    <footer class="footer pt-5 container d-flex justify-content-center">
+        <div>
+            <p>&copy; 내이름 2023. All Rights Reserved.</p>
+        </div>
+    </footer>
 
     <script>
         document.getElementById('admin-mode-btn').addEventListener('click', function() {
@@ -24,6 +65,18 @@
                 alert('비밀번호가 틀렸습니다.');
             }
         });
+
+        function gaReload() {
+            gtag('event', '다른 사진으로 재시도', { event_category: '다른 사진으로 재시도' });
+            window.location.reload();
+        }
+        function gaReload1() {
+            gtag('event', '다른 사진으로 재시도 1차', { event_category: '다른 사진으로 재시도' });
+        }
+        function gaReload2() {
+            gtag('event', '다른 사진으로 재시도 2차', { event_category: '다른 사진으로 재시도' });
+            window.location.reload();
+        }
 
         let model, webcam, labelContainer, maxPredictions;
         const settings = JSON.parse(localStorage.getItem('modelSettings'));
