--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 
     <script>
         document.getElementById('admin-mode-btn').addEventListener('click', function() {
-            var password = prompt('관리자 비밀번호를 입력하세요:');
-            if (password === '0000') {
+            const savedPassword = localStorage.getItem('adminPassword') || '0000';
+            const password = prompt('관리자 비밀번호를 입력하세요:');
+            if (password === savedPassword) {
                 window.location.href = 'admin.html';
             } else {
                 alert('비밀번호가 틀렸습니다.');
@@ -228,8 +229,4 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 gender toggle
 Copyright (c) 2020 by Mert Cukuren (https://codepen.io/knyttneve/pen/bPpEZY)
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-이 페이지는 유튜버 조코딩님의 강좌를 활용하여 제작되었습니다.
--->
-</html>
+The above copyright notice and this permission notice shall be included in all copies or substantial portions
