--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
-            <p>&copy; 내이름 2023. All Rights Reserved.</p>
+            <p>&copy; 내이름 2024. All Rights Reserved.</p>
         </div>
     </footer>
 
@@ -234,7 +234,7 @@
             var d = document, s = d.createElement('script');
             s.src = 'https://animal-12.disqus.com/embed.js';
             s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
+            (d.head or d.body).appendChild(s);
         })();
     </script>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
