--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <script data-ad-client="ca-pub-2962790403778987" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
-    <button id="admin-mode-btn" class="btn btn-secondary">관리자 모드</button>
     <section class="section">
         <h1 class="title">나만의 동물상 테스트</h1>
         <div class="image-container">
@@ -66,6 +65,114 @@
     </footer>
 
     <script>
+        async function loadSettings() {
+            try {
+                const response = await fetch('settings.json');
+                return await response.json();
+            } catch (error) {
+                console.error('Error loading settings:', error);
+                return null;
+            }
+        }
+
+        function addDynamicStyles(className, color) {
+            const style = document.createElement('style');
+            style.innerHTML = `
+                .${className}-box {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 2rem;
+                    border-radius: 10px;
+                    width: 100%;
+                    background-color: ${color}20;
+                }
+                .${className}-bar {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    height: 2rem;
+                    border-radius: 10px;
+                    background-color: ${color};
+                }
+                .${className}-animal-title {
+                    color: ${color};
+                }
+                .${className}-animal-celeb {
+                    color: ${color};
+                    font-size: 1.2rem;
+                }
+            `;
+            document.head.appendChild(style);
+        }
+
+        async function init() {
+            const settings = await loadSettings();
+            if (!settings) {
+                alert('설정을 불러오는 중 오류가 발생했습니다.');
+                return;
+            }
+
+            settings.classDetails.forEach(detail => {
+                addDynamicStyles(detail.name, detail.color);
+            });
+
+            const modelURL = settings.modelUrl + 'model.json';
+            const metadataURL = settings.modelUrl + 'metadata.json';
+            model = await tmImage.load(modelURL, metadataURL);
+            maxPredictions = model.getTotalClasses();
+            labelContainer = document.getElementById('label-container');
+            for (let i = 0; i < maxPredictions; i++) {
+                const element = document.createElement('div');
+                element.classList.add('d-flex');
+                labelContainer.appendChild(element);
+            }
+        }
+
+        async function predict() {
+            try {
+                const image = document.getElementById('face-image');
+                const prediction = await model.predict(image, false);
+                prediction.sort((a, b) => parseFloat(b.probability) - parseFloat(a.probability));
+
+                const settings = await loadSettings();
+                if (!settings) {
+                    alert('설정을 불러오는 중 오류가 발생했습니다.');
+                    return;
+                }
+
+                const topPrediction = prediction[0].className;
+                const classDetail = settings.classDetails.find(detail => detail.name === topPrediction);
+
+                if (classDetail) {
+                    const title = `<div class='${topPrediction}-animal-title'>${classDetail.title}</div>`;
+                    const explain = `<div class='animal-explain pt-2'>${classDetail.explain}</div>`;
+                    const celeb = `<div class='${topPrediction}-animal-celeb pt-2 pb-2'>${classDetail.celeb}</div>`;
+                    $('.result-message').html(title + explain + celeb);
+                } else {
+                    $('.result-message').html('<div class="animal-title">알 수 없음</div>');
+                }
+
+                for (let i = 0; i < maxPredictions; i++) {
+                    const labelTitle = settings.classDetails[i] ? settings.classDetails[i].name : '알 수 없음';
+                    const barWidth = Math.round(prediction[i].probability.toFixed(2) * 100) + '%';
+                    const label = `<div class='animal-label d-flex align-items-center'>${labelTitle}</div>`;
+                    const bar = `
+                        <div class='bar-container position-relative container'>
+                            <div class='${prediction[i].className}-box' style='width: 100%; height: 100%;'></div>
+                            <div class='d-flex justify-content-center align-items-center ${prediction[i].className}-bar' style='width: ${barWidth}; height: 100%;'>
+                                <span class='d-block percent-text'>${Math.round(prediction[i].probability.toFixed(2) * 100)}%</span>
+                            </div>
+                        </div>`;
+                    labelContainer.childNodes[i].innerHTML = label + bar;
+                }
+            } catch (error) {
+                console.error('Prediction error:', error);
+                $('.result-message').html('<div class="animal-title">분석 중 오류가 발생했습니다.</div>');
+                $('#loading').hide();
+            }
+        }
+
         document.getElementById('admin-mode-btn').addEventListener('click', function() {
             const savedPassword = localStorage.getItem('adminPassword') || '0000';
             const password = prompt('관리자 비밀번호를 입력하세요:');
@@ -83,7 +190,7 @@
             window.location.reload();
         }
 
-        function readURL(input) {
+        async function readURL(input) {
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
                 reader.onload = function(e) {
@@ -126,107 +233,7 @@
             $('.image-upload-wrap').removeClass('image-dropping');
         });
 
-        function addDynamicStyles(className, color) {
-            const style = document.createElement('style');
-            style.innerHTML = `
-                .${className}-box {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    height: 2rem;
-                    border-radius: 10px;
-                    width: 100%;
-                    background-color: ${color}20;
-                }
-                .${className}-bar {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    height: 2rem;
-                    border-radius: 10px;
-                    background-color: ${color};
-                }
-                .${className}-animal-title {
-                    color: ${color};
-                }
-                .${className}-animal-celeb {
-                    color: ${color};
-                    font-size: 1.2rem;
-                }
-            `;
-            document.head.appendChild(style);
-        }
-
-        async function init() {
-            let settings;
-            try {
-                const response = await fetch('/settings');
-                settings = await response.json();
-            } catch (error) {
-                console.error('Error loading settings:', error);
-                settings = {
-                    modelUrl: 'https://teachablemachine.withgoogle.com/models/APW2JsR7f/',
-                    classDetails: [
-                        {name: '유재석', title: '입툭튀 유재석상', explain: '다정다감하고 귀여운 당신은...', celeb: '유재석상 연예인: 박보영, 아이유, 윤승아, 민아(걸스데이), 한지민', color: 'rgba(27, 175, 234, 1)'},
-                        {name: '강호동', title: '집돼지 강호동상', explain: '도도하고 섹시한 당신은...', celeb: '강호동상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리', color: 'rgba(251, 176, 59, 1)'}
-                    ]
-                };
-            }
-
-            settings.classDetails.forEach(detail => {
-                addDynamicStyles(detail.name, detail.color);
-            });
-
-            const modelURL = settings.modelUrl + 'model.json';
-            const metadataURL = settings.modelUrl + 'metadata.json';
-            model = await tmImage.load(modelURL, metadataURL);
-            maxPredictions = model.getTotalClasses();
-            labelContainer = document.getElementById('label-container');
-            for (let i = 0; i < maxPredictions; i++) {
-                const element = document.createElement('div');
-                element.classList.add('d-flex');
-                labelContainer.appendChild(element);
-            }
-        }
-
-        async function predict() {
-            try {
-                const image = document.getElementById('face-image');
-                const prediction = await model.predict(image, false);
-                prediction.sort((a, b) => parseFloat(b.probability) - parseFloat(a.probability));
-
-                const topPrediction = prediction[0].className;
-                const settings = await fetch('/settings').then(res => res.json());
-                const classDetail = settings.classDetails.find(detail => detail.name === topPrediction);
-
-                if (classDetail) {
-                    const title = `<div class='${topPrediction}-animal-title'>${classDetail.title}</div>`;
-                    const explain = `<div class='animal-explain pt-2'>${classDetail.explain}</div>`;
-                    const celeb = `<div class='${topPrediction}-animal-celeb pt-2 pb-2'>${classDetail.celeb}</div>`;
-                    $('.result-message').html(title + explain + celeb);
-                } else {
-                    $('.result-message').html('<div class="animal-title">알 수 없음</div>');
-                }
-
-                for (let i = 0; i < maxPredictions; i++) {
-                    const labelTitle = settings.classDetails[i] ? settings.classDetails[i].name : '알 수 없음';
-                    const barWidth = Math.round(prediction[i].probability.toFixed(2) * 100) + '%';
-                    const label = `<div class='animal-label d-flex align-items-center'>${labelTitle}</div>`;
-                    const bar = `
-                        <div class='bar-container position-relative container'>
-                            <div class='${prediction[i].className}-box' style='width: 100%; height: 100%;'></div>
-                            <div class='d-flex justify-content-center align-items-center ${prediction[i].className}-bar' style='width: ${barWidth}; height: 100%;'>
-                                <span class='d-block percent-text'>${Math.round(prediction[i].probability.toFixed(2) * 100)}%</span>
-                            </div>
-                        </div>`;
-                    labelContainer.childNodes[i].innerHTML = label + bar;
-                }
-            } catch (error) {
-                console.error('Prediction error:', error);
-                $('.result-message').html('<div class="animal-title">분석 중 오류가 발생했습니다.</div>');
-                $('#loading').hide();
-            }
-        }
+        window.onload = init;
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
