--- a/index.html
+++ b/index.html
@@ -79,20 +79,9 @@
             const style = document.createElement('style');
             style.innerHTML = `
                 .${className}-box {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    height: 2rem;
-                    border-radius: 10px;
-                    width: 100%;
                     background-color: ${color}33; /* Adjust transparency for background */
                 }
                 .${className}-bar {
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    height: 2rem;
-                    border-radius: 10px;
                     background-color: ${color};
                 }
                 .${className}-animal-title {
@@ -159,8 +148,8 @@
                     const label = `<div class='animal-label d-flex align-items-center'>${labelTitle}</div>`;
                     const bar = `
                         <div class='bar-container position-relative container'>
-                            <div class='${prediction[i].className}-box' style='width: 100%; height: 100%;'></div>
-                            <div class='d-flex justify-content-center align-items-center ${prediction[i].className}-bar' style='width: ${barWidth}; height: 100%;'>
+                            <div class='${prediction[i].className}-box dynamic-box' style='width: 100%; height: 100%;'></div>
+                            <div class='d-flex justify-content-center align-items-center ${prediction[i].className}-bar dynamic-bar' style='width: ${barWidth}; height: 100%;'>
                                 <span class='d-block percent-text'>${Math.round(prediction[i].probability.toFixed(2) * 100)}%</span>
                             </div>
                         </div>`;
