--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>나만의 동물상 테스트</title>
+    <title id="page-title">나만의 동물상 테스트</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145482737-6"></script>
@@ -20,12 +20,12 @@
 </head>
 <body>
     <section class="section">
-        <h1 class="title">나만의 동물상 테스트</h1>
+        <h1 class="title" id="main-title">나만의 동물상 테스트</h1>
         <div class="image-container">
             <img src="img/mainimage.jpg" alt="Main Image" class="image">
         </div>
     </section>
-    <h2 class="subtitle">얼굴로 보는 인공지능 동물상 테스트</h2>
+    <h2 class="subtitle" id="subtitle">얼굴로 보는 인공지능 동물상 테스트</h2>
 
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <div class="mt-3 container file-upload">
@@ -60,7 +60,7 @@
 
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
-            <p>&copy; 내이름 2023. All Rights Reserved.</p>
+            <p id="footer-text">&copy; 내이름 2023. All Rights Reserved.</p>
         </div>
     </footer>
 
@@ -106,6 +106,12 @@
                 alert('설정을 불러오는 중 오류가 발생했습니다.');
                 return;
             }
+
+            // Apply page settings
+            document.getElementById('page-title').innerText = settings.pageTitle;
+            document.getElementById('main-title').innerText = settings.mainTitle;
+            document.getElementById('subtitle').innerText = settings.subtitle;
+            document.getElementById('footer-text').innerHTML = settings.footerText;
 
             settings.classDetails.forEach(detail => {
                 addDynamicStyles(detail.name, detail.color);
